--- a/index-2.html
+++ b/index-2.html
@@ -24,6 +24,7 @@
 
     <main>
 
+        <!-- contenus importants-->
         <article>
             <section id="centre">
                 <h3> La licence professionnelle</h3>
@@ -56,6 +57,7 @@
             </section>
         </article>
 
+        <!-- contenus moins importants mis sur le côté droit de la page-->
         <aside>
             <section>
                 <h3>Sommaire</h3>
@@ -90,6 +92,7 @@
         </aside>
     </main>
 
+    <!--pied de page-->
     <footer>
         Page web réalisée par Ugo Domingez, Jules Gruson-Delannoy, Clémence Bocquet, Ambroise Boutrin 
         <img src="images/logo-univ.png" alt="logo université Orléans">
